--- a/.bzrignore
+++ b/.bzrignore
@@ -2,3 +2,26 @@ gedit/__init__.py
 gedit/geditcommands.py
 gedit/geditutils.py
 gdp.xml
+Makefile.in
+intltool-extract
+intltool-extract.in
+intltool-merge
+intltool-merge.in
+intltool-update
+intltool-update.in
+configure
+aclocal.m4
+autom4te.cache
+config.guess
+config.log
+config.status
+config.sub
+py-compile
+.intltool-merge-cache
+po/Makefile
+po/Makefile.in.in
+po/stamp-it
+Makefile
+install-sh
+po/POTFILES
+missing
