Added basic plugin for search multiple files. There is enough in place to write tests and add the core feature.

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -4,9 +4,13 @@ SUBDIRS = gdp
 plugindir = $(GEDIT_PLUGIN_DIR)
 
 plugin_PYTHON = \
-	syntaxcompleterplugin.py
+	syntaxcompleterplugin.py \
+	searchplugin.py
 
-plugin_in_files = syntaxcompleter.gedit-plugin.desktop.in
+plugin_in_files = \
+	syntaxcompleter.gedit-plugin.desktop.in \
+	search.gedit-plugin.desktop.in
+
 %.gedit-plugin: %.gedit-plugin.desktop.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
 
 plugin_DATA = $(plugin_in_files:.gedit-plugin.desktop.in=.gedit-plugin)
