Renamed searchplugin to findplugin. Add glade file to makefile.am

--- a/plugins/gdp/Makefile.am
+++ b/plugins/gdp/Makefile.am
@@ -4,6 +4,9 @@ plugin_PYTHON = \
 	__init__.py \
 	syntaxcompleter.py
 
+gladedir = $(plugindir)
+glade_DATA = gdp.glade
+
 CLEANFILES = *.bak *.pyc *.pyo
 DISTCLEANFILES = *.bak *.pyc *.pyo
 
