--- a/plugins/find.gedit-plugin.deskton.in
+++ b/plugins/find.gedit-plugin.deskton.in
@@ -1,9 +1,9 @@
 [Gedit Plugin]
 Loader=python
-Module=searchplugin
+Module=findplugin
 IAge=2
-Name=GDP Project Search Plugin
-Description=Search files in a project.
+Name=GDP Find Plugin
+Description=Find matching text in multiple files.
 Authors=Curtis Hovey <sinzui.is@verizon.net>
 Copyright=Copyright © 2008 Curtis Hovey
 Website=http://curtis.hovey.name/sinzui
