Moved formatdoctest into the format plugin. Removed redundant tools.

--- a/plugins/gdp/Makefile.am
+++ b/plugins/gdp/Makefile.am
@@ -3,6 +3,7 @@ plugindir = $(GEDIT_PLUGIN_DIR)/gdp
 plugin_PYTHON = \
 	__init__.py \
 	format.py \
+	formatdoctest.py \
 	syntaxcompleter.py
 
 gladedir = $(plugindir)
