--- a/plugins/gdpfind.gedit-plugin.deskton.in
+++ b/plugins/gdpfind.gedit-plugin.deskton.in
@@ -1,9 +1,9 @@
 [Gedit Plugin]
 Loader=python
-Module=findplugin
+Module=gdpfind
 IAge=2
 Name=GDP Find Plugin
 Description=Find matching text in multiple files.
 Authors=Curtis Hovey <sinzui.is@verizon.net>
-Copyright=Copyright © 2008 Curtis Hovey
+Copyright=Copyright © 2008-2009 Curtis Hovey
 Website=http://curtis.hovey.name/sinzui
