--- a/plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
+++ b/plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
@@ -1,9 +1,9 @@
 [Gedit Plugin]
 Loader=python
-Module=syntaxcompleterplugin
+Module=gdpsyntaxcompleter
 IAge=2
 Name=GDP Syntax Completer Plugin
 Description=Complete words and Python symbols at the cursor.
 Authors=Curtis Hovey <sinzui.is@verizon.net>
-Copyright=Copyright © 2007 Curtis Hovey
+Copyright=Copyright © 2007-2009 Curtis Hovey
 Website=http://curtis.hovey.name/sinzui
