--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,4 +2,8 @@
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
 plugins/gdpformat.gedit-plugin.desktop.in
-plugins/syntaxcompleter.gedit-plugin.desktop.in
+plugins/gdpformat.py
+plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
+plugins/gdpsyntaxcompleter.py
+plugins/gdp/format.py
+plugins/gdp/syntaxcompleter.py
