--- a/plugins/gdpfind.gedit-plugin.deskton.in
+++ b/plugins/gdpfind.gedit-plugin.deskton.in
@@ -2,8 +2,8 @@
 Loader=python
 Module=gdpfind
 IAge=2
-Name=GDP Find Plugin
-Description=Find matching text in multiple files.
+_Name=GDP Find Plugin
+_Description=Find matching text in multiple files.
 Authors=Curtis Hovey <sinzui.is@verizon.net>
 Copyright=Copyright © 2008-2009 Curtis Hovey
 Website=http://curtis.hovey.name/sinzui
