--- a/plugins/gdpformat.gedit-plugin.desktop.in
+++ b/plugins/gdpformat.gedit-plugin.desktop.in
@@ -2,8 +2,8 @@
 Loader=python
 Module=gdpformat
 IAge=2
-Name=GDP format Plugin
-Description=Format text and code.
+_Name=GDP format Plugin
+_Description=Format text and code.
 Authors=Curtis Hovey <sinzui.is@verizon.net>
 Copyright=Copyright © 2009 Curtis Hovey
 Website=http://curtis.hovey.name/sinzui
