--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,12 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
+plugins/gdp/bzr.py
+plugins/gdp/format.py
+plugins/gdp/syntaxcompleter.py
+plugins/gdpbzr.gedit-plugin.desktop.in
+plugins/gdpbzr.py
 plugins/gdpformat.gedit-plugin.desktop.in
 plugins/gdpformat.py
 plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
 plugins/gdpsyntaxcompleter.py
-plugins/gdp/format.py
-plugins/gdp/syntaxcompleter.py
