--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -7,12 +7,14 @@ plugindir = $(GEDIT_PLUGIN_DIR)
 
 plugin_PYTHON = \
 	gdpbzr.py \
+	gdpfind.py \
 	gdpformat.py \
 	gdpsyntaxcompleter.py \
 	$(NULL)
 
 plugin_in_files = \
 	gdpbzr.gedit-plugin.desktop.in \
+	gdpfind.gedit-plugin.desktop.in \
 	gdpformat.gedit-plugin.desktop.in \
 	gdpsyntaxcompleter.gedit-plugin.desktop.in \
 	$(NULL)
