--- a/plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
+++ b/plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
@@ -2,7 +2,7 @@
 Loader=python
 Module=gdpsyntaxcompleter
 IAge=2
-_Name=GDP Syntax Completer Plugin
+_Name=GDP Syntax Completer
 _Description=Complete words and Python symbols at the cursor.
 Authors=Curtis Hovey <sinzui.is@verizon.net>
 Copyright=Copyright © 2007-2009 Curtis Hovey
