Added pep8.py to contrib

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = po testing plugins snippets tools language-specs
+SUBDIRS = po testing plugins snippets tools language-specs contrib
 
 NULL =
 
