--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,12 +1,23 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
+language-specs/diff.lang
+language-specs/doctest.lang
+language-specs/ini.lang
+language-specs/moin.lang
+language-specs/pagetemplate.lang
+language-specs/python.lang
 plugins/gdp/bzr.py
 plugins/gdp/format.py
 plugins/gdp/syntaxcompleter.py
 plugins/gdpbzr.gedit-plugin.desktop.in
 plugins/gdpbzr.py
+plugins/gdp/find.ui
+plugins/gdpfind.gedit-plugin.desktop.in
+plugins/gdpfind.py
 plugins/gdpformat.gedit-plugin.desktop.in
 plugins/gdpformat.py
+plugins/gdp/format.ui
 plugins/gdpsyntaxcompleter.gedit-plugin.desktop.in
 plugins/gdpsyntaxcompleter.py
+
