--- a/testing/Makefile.am
+++ b/testing/Makefile.am
@@ -1,3 +1,12 @@
+NULL =
+
+EXTRA_DIST = \
+	fakegen.py \
+	gedithelpers.py \
+	__init__.py \
+	testrunner.py \
+	$(NULL)
+
 gen_gedit = (cd $(top_srcdir) \
 	&& rm -f gedit/*.py gedit/*.pyc \
 	&& $(PYTHON) utils/gen-gedit.py)
