--- a/testing/Makefile.am
+++ b/testing/Makefile.am
@@ -7,6 +7,14 @@ EXTRA_DIST = \
 	testrunner.py \
 	$(NULL)
 
+dist-hook:
+	mkdir $(distdir)/tests
+	cp -p $(srcdir)/tests/* $(distdir)/tests
+	rm -f $(distdir)/tests/*.pyc
+	mkdir $(distdir)/codegen
+	cp -p $(srcdir)/codegen/* $(distdir)/codegen
+	rm -f $(distdir)/codegen/*.pyc
+
 gen_gedit = (cd $(top_srcdir) \
 	&& rm -f gedit/*.py gedit/*.pyc \
 	&& $(PYTHON) utils/gen-gedit.py)
