Added Pyflakes to contrib to lower plugin dependencies.

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -6,5 +6,13 @@ plugin_PYTHON = \
 	pep8.py \
 	$(NULL)
 
+pluginpyflakesdir = $(GEDIT_PLUGIN_DIR)/pyflakes
+
+pluginpyflakes_PYTHON = \
+	pyflakes/__init__.py \
+	pyflakes/checker.py \
+	pyflakes/messages.py \
+	$(NULL)
+
 CLEANFILES = *.bak *.pyc *.pyo $(plugin_DATA)
 DISTCLEANFILES = *.bak *.pyc *.pyo $(plugin_DATA)
