Tuned the config.

--- a/configure.ac
+++ b/configure.ac
@@ -2,14 +2,14 @@
 
 AC_PREREQ(2.61)
 
-m4_define(gdp_major_version, 2)
-m4_define(gdp_minor_version, 28)
-m4_define(gdp_micro_version, 0)
+m4_define(gdp_major_version, 0)
+m4_define(gdp_minor_version, 2)
+m4_define(gdp_micro_version, 1)
 m4_define(gdp_version, gdp_major_version.gdp_minor_version.gdp_micro_version)
 
 AC_INIT(gedit-developer-plugins, gdp_version, sinzui.is@verizon.net)
 AM_INIT_AUTOMAKE([1.9 -Wno-portability])
-IT_PROG_INTLTOOL([0.36.0])
+IT_PROG_INTLTOOL([0.35.0])
 
 AM_MAINTAINER_MODE
 
@@ -29,9 +29,8 @@ AM_PATH_PYTHON
 # not always available. gtksourceview is a good indicator of the
 # Gedit version.
 PKG_CHECK_MODULES(GEDIT, [
-    gtk+-2.0 >= 2.16
     pygtk-2.0 >= 2.14
-    gtksourceview-2.0 >= 2.0.0
+    gedit-2.20 >= 2.26.0
 ])
 
 # i18n configuration.
