Added js file needed by the jslinter.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,5 @@ include HACKING
 include INSTALL
 include README
 include ChangeLog
+include pocketlint/jsreporter.js
+include pocketlint/contrib/fulljslint.js
