--- a/debian/control
+++ b/debian/control
@@ -21,9 +21,11 @@ Description: a composite linter and style checker
  * Supports checking of multiple source types:
   * Python syntax and style
   * Python doctest style
-  * XML/HTML style and entities
-  * CSS style
+  * XML/HTML style, syntax, and entities
+  * CSS style and sytax
   * JavaScript syntax and style
+  * JSON data syntax
+  * reStructured Text style
   * Plain text
  * Supports reporting:
   * Python doctests
