Build a py2 package for pocketlint.

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Curtis C. Hovey <sinzui.is@verizon.net>
 Homepage: https://launchpad.net/pocket-lint
 Build-Depends: debhelper (>= 5.0.37.2), cdbs (>= 0.4.43), python-all, python-support (>= 0.5.3), pyflakes (>= 0.5.0)
 Vcs-Bzr: http://bazaar.launchpad.net/~sinzui/pocket-lint/packaging
+X-Python-Version: >= 2.6
+X-Python3-Version: >= 3.2
 Standards-Version: 3.9.1
 
 Package: python-pocket-lint
@@ -27,7 +29,4 @@ Description: a composite linter and style checker
   * JSON data syntax
   * reStructured Text style
   * Plain text
- * Supports reporting:
-  * Python doctests
-  * CSS
   * XML/HTML.
