--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,8 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                python3-setuptools
                pyflakes (>= 0.7.3)
+               pep8
+               python3-pep8
 Vcs-Bzr: http://bazaar.launchpad.net/~sinzui/pocket-lint/packaging
 X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.3
