--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
                python-all,
                python-setuptools,
                python3-all,
-               python3-setuptools
+               python3-setuptools,
                pyflakes (>= 0.7.3),
                pep8 (>= 1.4.0),
                python3-pep8 (>= 1.4.0)
