--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ PY3_VERSION:=$(shell py3versions -d)
 override_dh_auto_install:
 	dh_auto_install
 	# Install scripts for the latest 2x and 3.x.
-	cp $BIN_PATH/pocketlint $(CURDIR)/$(BIN_PATH)/pocketlint2
+	cp $(CURDIR)/$(BIN_PATH)/pocketlint $(CURDIR)/$(BIN_PATH)/pocketlint2
 	sed -i "1s/python.*/python$(PY_VERSION)/" $(CURDIR)/$(BIN_PATH)/pocketlint2
-	cp $BIN_PATH/pocketlint $(CURDIR)/$(BIN_PATH)/pocketlint3
+	cp $(CURDIR)/$(BIN_PATH)/pocketlint $(CURDIR)/$(BIN_PATH)/pocketlint3
 	sed -i "1s/python.*/python$(PY3_VERSION)/" $(CURDIR)/$(BIN_PATH)/pocketlint3
